--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,43 +1,164 @@
-<footer class="footer">
+{% schema %}
+{
+  "name": "Footer",
+  "settings": [
+    {
+      "type": "image_picker",
+      "id": "logo",
+      "label": "Logo"
+    },
+    {
+      "type": "textarea",
+      "id": "description",
+      "label": "Description",
+      "default": "The world's first climate-controlled dog crate, designed for the modern pet owner."
+    },
+    {
+      "type": "text",
+      "id": "copyright_text",
+      "label": "Copyright Text",
+      "default": "© 2025 TALA. All rights reserved."
+    }
+  ],
+  "blocks": [
+    {
+      "type": "link_list",
+      "name": "Link List",
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "label": "Heading",
+          "default": "Quick Links"
+        }
+      ]
+    },
+    {
+      "type": "link",
+      "name": "Link",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Link Text",
+          "default": "Link"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "Link URL"
+        },
+        {
+          "type": "select",
+          "id": "parent",
+          "label": "Parent List",
+          "options": [
+            {
+              "value": "list1",
+              "label": "List 1"
+            },
+            {
+              "value": "list2",
+              "label": "List 2"
+            },
+            {
+              "value": "list3",
+              "label": "List 3"
+            }
+          ],
+          "default": "list1"
+        }
+      ]
+    },
+    {
+      "type": "legal_link",
+      "name": "Legal Link",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Link Text",
+          "default": "Legal Link"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "Link URL"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Footer",
+      "category": "Footer"
+    }
+  ]
+}
+{% endschema %}
+
+<div class="footer">
   <div class="container">
     <div class="footer__content">
       <div class="footer__logo">
-        <img src="{{ 'charcoal.png' | asset_url }}" alt="TALA Logo" class="footer__logo-img">
+        {% if section.settings.logo %}
+          <img src="{{ section.settings.logo | img_url: 'master' }}" alt="{{ shop.name }}" class="footer__logo-img">
+        {% else %}
+          <img src="{{ 'charcoal.png' | asset_url }}" alt="{{ shop.name }}" class="footer__logo-img">
+        {% endif %}
+        <p>{{ section.settings.description }}</p>
       </div>
       <div class="footer__links">
-        <div class="footer__column">
-          <h4 class="footer__heading">Product</h4>
-          <ul class="footer__list">
-            <li><a href="#features" class="footer__link">Features</a></li>
-            <li><a href="#climate-control" class="footer__link">Climate Control</a></li>
-            <li><a href="#safety" class="footer__link">Safety</a></li>
-            <li><a href="#portability" class="footer__link">Portability</a></li>
-          </ul>
-        </div>
-        <div class="footer__column">
-          <h4 class="footer__heading">Company</h4>
-          <ul class="footer__list">
-            <li><a href="#" class="footer__link">About Us</a></li>
-            <li><a href="#" class="footer__link">Contact</a></li>
-            <li><button class="footer__link waitlist-trigger">Join Waitlist</button></li>
-          </ul>
-        </div>
-        <div class="footer__column">
-          <h4 class="footer__heading">Connect</h4>
-          <ul class="footer__list footer__social">
-            <li><a href="#" class="footer__link">Instagram</a></li>
-            <li><a href="#" class="footer__link">Facebook</a></li>
-            <li><a href="#" class="footer__link">Twitter</a></li>
-          </ul>
-        </div>
+        {% assign list1_links = '' | split: '' %}
+        {% assign list2_links = '' | split: '' %}
+        {% assign list3_links = '' | split: '' %}
+        
+        {% for block in section.blocks %}
+          {% if block.type == 'link' %}
+            {% if block.settings.parent == 'list1' %}
+              {% assign list1_links = list1_links | push: block %}
+            {% elsif block.settings.parent == 'list2' %}
+              {% assign list2_links = list2_links | push: block %}
+            {% elsif block.settings.parent == 'list3' %}
+              {% assign list3_links = list3_links | push: block %}
+            {% endif %}
+          {% endif %}
+        {% endfor %}
+        
+        {% for block in section.blocks %}
+          {% if block.type == 'link_list' %}
+            <div class="footer__column" {{ block.shopify_attributes }}>
+              <h3 class="footer__heading">{{ block.settings.heading }}</h3>
+              <ul class="footer__list">
+                {% assign list_index = forloop.index %}
+                {% if list_index == 1 %}
+                  {% for link in list1_links %}
+                    <li><a href="{{ link.settings.url }}" class="footer__link">{{ link.settings.title }}</a></li>
+                  {% endfor %}
+                {% elsif list_index == 2 %}
+                  {% for link in list2_links %}
+                    <li><a href="{{ link.settings.url }}" class="footer__link">{{ link.settings.title }}</a></li>
+                  {% endfor %}
+                {% elsif list_index == 3 %}
+                  {% for link in list3_links %}
+                    <li><a href="{{ link.settings.url }}" class="footer__link">{{ link.settings.title }}</a></li>
+                  {% endfor %}
+                {% endif %}
+              </ul>
+            </div>
+          {% endif %}
+        {% endfor %}
       </div>
     </div>
     <div class="footer__bottom">
-      <p class="footer__copyright">&copy; 2025 TALA. All rights reserved.</p>
+      <p class="footer__copyright">{{ section.settings.copyright_text }}</p>
       <div class="footer__legal">
-        <a href="#" class="footer__legal-link">Privacy Policy</a>
-        <a href="#" class="footer__legal-link">Terms of Service</a>
+        {% for block in section.blocks %}
+          {% if block.type == 'legal_link' %}
+            <a href="{{ block.settings.url }}" class="footer__legal-link" {{ block.shopify_attributes }}>{{ block.settings.title }}</a>
+          {% endif %}
+        {% endfor %}
       </div>
     </div>
   </div>
-</footer>
+</div>
