--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TALA - The Smartest, Safest Dog Travel Sanctuary</title>
+  <title>{{ page_title }}</title>
   {{ 'main.css' | asset_url | stylesheet_tag }}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  {{ 'dark-mode.css' | asset_url | stylesheet_tag }}
+  {{ 'hero-final.css' | asset_url | stylesheet_tag }}
 </head>
 <body>
   {% section 'header' %}
@@ -18,7 +17,6 @@
   {% section 'portability' %}
   {% section 'cta' %}
   {% section 'footer' %}
-  
   {% section 'waitlist-popup' %}
   
   {{ 'main.js' | asset_url | script_tag }}
