fixed shopify compatibility

--- a/sections/cta.liquid
+++ b/sections/cta.liquid
@@ -21,7 +21,7 @@
       "default": "Learn More"
     },
     {
-      "type": "url",
+      "type": "text",
       "id": "primary_button_link",
       "label": "Primary Button Link",
       "default": "#features"
