--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -21,7 +21,7 @@
       "default": "LEARN MORE"
     },
     {
-      "type": "url",
+      "type": "text",
       "id": "button_link",
       "label": "Primary Button Link",
       "default": "#features"
