--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -65,7 +65,8 @@
         {% if section.settings.logo %}
           <img src="{{ section.settings.logo | img_url: 'master' }}" alt="{{ shop.name }}" class="header__logo-img" style="max-width: {{ section.settings.logo_width }}px;">
         {% else %}
-          <img src="{{ 'charcoal.png' | asset_url }}" alt="{{ shop.name }}" class="header__logo-img">
+          <img src="{{ 'tala-logo-charcoal.png' | asset_url }}" alt="{{ shop.name }}" class="header__logo-img light-mode-logo">
+          <img src="{{ 'tala-logo-cream.png' | asset_url }}" alt="{{ shop.name }}" class="header__logo-img dark-mode-logo">
         {% endif %}
       </a>
     </div>
