--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -54,7 +54,7 @@
 
 <div class="hero">
   <div class="hero__image">
-    <img src="{{ section.settings.light_mode_image | default: 'Banner-Blue-Ocean.png' | asset_url }}" alt="TALA Dog Crate at Beach" class="hero__img light-mode-img">
+    <img src="{{ section.settings.light_mode_image | default: 'rock-climb-01.png' | asset_url }}" alt="TALA Dog Crate in Canyon" class="hero__img light-mode-img">
     <img src="{{ section.settings.dark_mode_image | default: 'Tan-blackstudio-02.png' | asset_url }}" alt="TALA Dog Crate" class="hero__img dark-mode-img">
   </div>
   <div class="container">
