--- a/sections/safety.liquid
+++ b/sections/safety.liquid
@@ -74,7 +74,7 @@
         {% if section.settings.image %}
           <img src="{{ section.settings.image | img_url: 'master' }}" alt="{{ section.settings.heading }}" class="safety__img">
         {% else %}
-          <img src="{{ 'ComfyUI_temp_tshmy_00004_.png' | asset_url }}" alt="{{ section.settings.heading }}" class="safety__img">
+          <img src="{{ 'husky-beach.png' | asset_url }}" alt="{{ section.settings.heading }}" class="safety__img">
         {% endif %}
       </div>
       <div class="safety__text">
